2008-02-04  Kenichi Handa  <handa@ni.aist.go.jp>

	* international/mule-diag.el (print-fontset-element): Handle the
	case of inhibitting the fallback fonts.

2008-02-04  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-magic-forward-char, ido-magic-backward-char)
	(ido-magic-delete-char): Use prefix arg.

2008-02-03  Juanma Barranquero  <lekktu@gmail.com>

	* term/w32-win.el (image-library-alist): Prefer libpng12 to libpng13,
	because the latter is in fact a 1.2.8 build distributed with GTK+ (as
	of today, the most recent libpng is 1.2.24).

2008-02-03  Michael Albinus  <michael.albinus@gmx.de>

	* ediff-util.el (ediff-compute-custom-diffs-maybe): Handle remote
	files.

	* net/dbus.el (top): Check (featurep 'dbusbind).

	* net/tramp.el (tramp-process-sentinel): New defun.
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection): Use it as process sentinel.
	(tramp-handle-delete-directory): Don't use the "-f" option; it
	isn't portable.
	(tramp-handle-start-file-process): Echo `tramp-end-of-output'
	after the command.
	(tramp-handle-shell-command): Set `mode-line-process' in the
	asynchronous case.

	* net/tramp-cache.el (tramp-flush-connection-property): Remove EVENT.

	* net/tramp-fish.el (tramp-fish-maybe-open-connection):
	* net/tramp-smb.el (tramp-smb-maybe-open-connection): Use
	`tramp-process-sentinel' as process sentinel.

2008-02-02  Juanma Barranquero  <lekktu@gmail.com>

	* whitespace.el (global-whitespace-mode): Revert last change.
	(whitespace-unload-function): Force `global-whitespace-mode'
	to deactivate local modes in a slightly less intrusive way.

2008-02-02  Eli Zaretskii  <eliz@gnu.org>

	* view.el (kill-buffer-if-not-modified): Add an autoload cookie.

2008-02-02  Glenn Morris  <rgm@gnu.org>

	* international/latin1-disp.el (latin1-display):
	* progmodes/fortran.el (fortran-comment-indent-char):
	* progmodes/idlw-shell.el (top-level):
	* term/mac-win.el (mac-keyboard-translate-char):
	* whitespace.el (whitespace-char-valid-p):